Updates to some css issues when on mobile, cleaning up old images

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-html { overflow-y: scroll; }
+html {
+  overflow-y: scroll;
+}
 
 .AF-Header {
   color: #355666;
@@ -8,12 +10,14 @@ html { overflow-y: scroll; }
   text-align: center;
 }
 
-.AF-Header-Font{
+.AF-Header-Font {
   font-size: 120px;
 }
-@media(max-width: 1000px){.AF-Header-Font{
-  font-size: 70px;
-}}
+@media (max-width: 1000px) {
+  .AF-Header-Font {
+    font-size: 70px;
+  }
+}
 
 .AF-Nav-Div {
   background-color: white;
@@ -23,13 +27,13 @@ html { overflow-y: scroll; }
   z-index: 11;
 }
 .AF-Nav-Bar {
-  background-color: rgb(128 ,128,128,.05);;
+  background-color: rgb(128, 128, 128, 0.05);
   top: 0;
   width: 100%;
   z-index: 10;
 }
 
-.AF-Nav-Item {;
+.AF-Nav-Item {
   text-align: center;
   margin: 0 auto;
 }
@@ -54,16 +58,18 @@ html { overflow-y: scroll; }
 }
 
 .AF-Img-Text {
-  background-color: rgb(0,0,0,.5);
+  box-sizing: border-box;
+  background-color: rgb(0, 0, 0, 0.5);
   position: absolute;
   padding: 1em;
   width: 100%;
   height: 100%;
+  max-height: 100%;
   top: 0;
   text-align: center;
   color: white;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
@@ -75,19 +81,21 @@ html { overflow-y: scroll; }
   font-size: 6vw;
 }
 
-.MText{
+.MText {
   font-size: 4vw;
 }
 
-.SText{
+.SText {
   font-size: 2.5vw;
 }
 
-@media(max-width: 1000px){.SText{
-  font-size: 3.5vw;
-}}
+@media (max-width: 1000px) {
+  .SText {
+    font-size: 3.5vw;
+  }
+}
 
-.NavText{
+.NavText {
   font-size: 1em;
 }
 
@@ -99,9 +107,8 @@ html { overflow-y: scroll; }
   text-align: left;
 }
 
-
 .MainFont {
-  font-family: 'Oxygen', sans-serif;
+  font-family: "Oxygen", sans-serif;
 }
 
 .AF-Col {
@@ -120,11 +127,14 @@ html { overflow-y: scroll; }
 }
 
 .AF-Button {
-  padding: 20px 20px ;
+  padding: 20px 20px;
 }
-
 
 .AF-Loading {
   padding: 2em 2em;
   text-align: center;
+}
+
+p {
+  width: 100%;
 }
